2007-12-17  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do not try to link with non existent static archives.
	* build-aux/boost.m4 (BOOST_FIND_LIB): Here.
	Suggested by David Herring.

2007-12-17  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Move a test outside a huge loop.
	* build-aux/boost.m4 (BOOST_FIND_LIB): Check that $libext is set (by
	Libtool) and non-empty earlier.

2007-12-16  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Re-order the macros alphabetically.
	* build-aux/boost.m4 (BOOST_TRIBOOL): Move to the correct place.

2007-12-16  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add support for Boost.Tokenizer.
	* README: Mention the new lib.
	* build-aux/boost.m4 (BOOST_TOKENIZER): New.
	* tests/testsuite.at: Test the new macro.

2007-12-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Mention the Libtool dependency in the M4 file.
	* build-aux/boost.m4: Here.
	Also update the serial...

2007-12-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Support Boost.IOStreams.
	* README: Mention the new library.
	* build-aux/boost.m4 (BOOST_IOSTREAMS): New.
	Contribution of Jens Seidel.
	* tests/testsuite.at: Test the new macro.

2007-12-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Update the documentation.
	* README: Fix a typo.  Mention an inconsistency with BOOST_TEST.
	* build-aux/boost.m4 (BOOST_REQUIRE): Mention explicitely that
	VERSION can be of the form "X.Y.Z".
	Report by Jens Seidel.

2007-12-03  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Do not depend on Autoconf 2.61.
	AS_TEST_X was introduced in 2.61.  Alas, 2.60 is still common out
	there, so let's use $as_executable_p instead.
	* THANKS: Update.
	* build-aux/boost.m4 (_BOOST_AC_LINK_IFELSE): Here.
	Report by Jens Seidel.

2007-11-30  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add support for Boost.Functional/Hash.
	* README: Mention the new library.
	* build-aux/boost.m4 (BOOST_HASH): New.
	* tests/testsuite.at: Test the new macro.

2007-11-24  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Add a THANKS file.
	* THANKS: New.
