@@ -129,6 +129,7 @@ The following libraries are supported:
   - IOStreams
   - Program_options
   - Regex
+  - Serialization
   - Signals
   - Test (aka Unit Test Framework)
   - Threads
