@@ -266,6 +266,7 @@ AT_CHECK_MACRO([BOOST_GRAPH], [lib])
 AT_CHECK_MACRO([BOOST_IOSTREAMS], [lib])
 AT_CHECK_MACRO([BOOST_IOSTREAMS (static)], [lib], [BOOST_IOSTREAMS([s])])
 AT_CHECK_MACRO([BOOST_PROGRAM_OPTIONS], [lib])
+AT_CHECK_MACRO([BOOST_SERIALIZATION], [lib])
 AT_CHECK_MACRO([BOOST_SIGNALS], [lib])
 AT_CHECK_MACRO([BOOST_REGEX], [lib])
 AT_CHECK_MACRO([BOOST_TEST], [lib])
