@@ -1,3 +1,10 @@
+2008-01-06  Benoit Sigoure  <tsuna@lrde.epita.fr>
+
+	Add support for Boost.Serialization.
+	* README: Document the change.
+	* build-aux/boost.m4 (BOOST_SERIALIZATION): New.
+	* tests/testsuite.at: Test the new macro.
+
 2007-12-17  Benoit Sigoure  <tsuna@lrde.epita.fr>
 
 	Do not try to link with non existent static archives.
